--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zone.js": "^0.13.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/node": "^20.0.0",
